--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  transition: background-color 0.3s, color 0.3s;
-  background-color: #f8f9fa;
   overflow: hidden;
+  background-image: url(/Images/Gautam_Buddha_University.jpg);
+  background-size: cover;
+  background-position: center;
 }
